{
    "name": "Controls",
    "maps": [
        {
            "name": "playerInput",
            "id": "f3992e39-6ecb-42c6-a3e8-df3ac37e2cd4",
            "actions": [
                {
                    "name": "move",
                    "type": "Value",
                    "id": "fa3bb929-e719-4848-9a6c-160f7d5711ee",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "interact",
                    "type": "Button",
                    "id": "32c7ec76-05f7-486c-979f-d762c42bee0e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "sprint",
                    "type": "Button",
                    "id": "ef08368f-124f-47c6-8bf4-0bb2480abe1c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "attack1",
                    "type": "Button",
                    "id": "c1a9a190-a414-45b7-8b7a-12101c75f723",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "attack2",
                    "type": "Button",
                    "id": "9d1b7dfd-7332-4b78-800b-3fa9ed5a6ed6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "attack3",
                    "type": "Button",
                    "id": "29e2087b-30e7-4825-aead-942f6eca39ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "attack4",
                    "type": "Button",
                    "id": "dbcab7dc-4ac5-477c-bfce-1f1a0894db33",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "testAction",
                    "type": "Value",
                    "id": "ac0ab9b9-b728-41d7-b756-56741cec416b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "proceed",
                    "type": "Value",
                    "id": "2b6ff894-c8a1-4747-bc87-f332122e138b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bf1f8d46-4b05-4699-9b20-9c8d8695a210",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "e6402ded-2c1f-4fb7-9aca-f558c8ba63f2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "146169d6-eb37-41ab-ba71-ea895f9b8ddf",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0b8eed08-997b-4007-a3df-6e3f22d1350c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ea793c33-a1b5-49d3-8df9-775ad2e5f1d1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d2182aa2-f811-4f9b-ae74-3b14a2651158",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "e2de4979-cc38-438f-8307-f6148ddb4130",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5e51eef0-63b3-4884-a701-f7bb57b5dc89",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b037990e-a017-49e6-b78f-8b3b56ee00d5",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "bd0f3fd4-4d7e-484c-bf46-670181fd8c72",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5253600b-18cf-4cb4-a6b3-40db99e1de75",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7d78182a-0bec-4425-b291-1518fb56f1da",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Touch",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b1f803f8-af8d-49a1-8cda-e53c26c0f756",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf19ad44-f522-4ffa-9810-9c32715e17c7",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "attack1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a51d6a84-cbdc-4b56-a823-24640069c923",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "attack2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce520324-5ae8-4577-912f-8f50efb0e44b",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "attack3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "815e9fa9-c800-43aa-800b-563d701d5af2",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "attack4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c286ad59-be02-47f9-8ba4-c67ccf4a0d96",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "testAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e26d0985-e847-476b-833f-6dddde55686f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "proceed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ef012ba-4f11-4268-9845-79b0c8c1dd2e",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "proceed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "dialogue",
            "id": "64a54c5a-5dd7-4331-894b-f5a4f5b0966e",
            "actions": [
                {
                    "name": "proceed",
                    "type": "Button",
                    "id": "48654ecc-5d54-47e8-82b6-c1103db83a8b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "10ce62f2-6275-45cc-b89f-f5a39468e2ae",
                    "path": "*/{Forward}",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard and Mouse;Touch",
                    "action": "proceed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c030f58-c5ce-4072-95d7-10fa6a9bbba8",
                    "path": "*/{PrimaryAction}",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard and Mouse;Touch",
                    "action": "proceed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa00b6cd-84e6-49bf-8757-21713e620ab3",
                    "path": "*/{Submit}",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard and Mouse;Touch",
                    "action": "proceed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09f9066f-1585-4cc1-bd8d-5bac7a50f027",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard and Mouse;Touch",
                    "action": "proceed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": []
        }
    ]
}